refactored model logic as well as was able to link the executable process to the stderr and stdout streams